force-app/main/default/objects/Error_Log_Metadata_Detail__mdt/Error_Log_Metadata_Detail__mdt.object-meta.xml
<CustomObject>
    <label>Error Log Metadata Detail</label>
    <pluralLabel>Error Log Metadata Details</pluralLabel>
</CustomObject>