force-app/main/default/objects/Error_Log_Metadata_Detail__mdt/fields/Recipients__c.field-meta.xml
<CustomField>
    <fullName>Recipients__c</fullName>
    <inlineHelpText>Comma Separated Emails</inlineHelpText>
    <label>Recipients</label>
    <type>Email</type>
</CustomField>