force-app/main/default/objects/Error_Log_Metadata_Detail__mdt/fields/SenderList__c.field-meta.xml
<CustomField>
    <fullName>SenderList__c</fullName>
    <label>SenderList</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>